// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CommandGroupTable re-renders when props are changed 1`] = `
<CommandGroupTable
  group={
    CommandGroup {
      "commands": Array [
        Command {
          "command": Array [],
          "description": Array [],
          "id": "cmd-1",
          "scmBreezeShortcut": Array [],
        },
        Command {
          "command": Array [],
          "description": Array [],
          "id": "cmd-2",
          "scmBreezeShortcut": Array [],
        },
      ],
      "id": "basic",
      "title": "Basic Commands",
    }
  }
>
  <div
    className="command-group"
  >
    <h4
      className="command-group-title"
      id="basic"
    >
      <div>
        Basic Commands
         
        <ForwardRef(Bootstrap(Badge))
          variant="secondary"
        >
          <Badge
            bsPrefix="badge"
            pill={false}
            variant="secondary"
          >
            <span
              className="badge badge-secondary"
            >
              2
            </span>
          </Badge>
        </ForwardRef(Bootstrap(Badge))>
         
        <a
          className="command-group-link"
          href="#basic"
        >
          #
        </a>
      </div>
    </h4>
    <ForwardRef(Bootstrap(Table))
      bordered={true}
      className="command-group-table"
      striped={true}
    >
      <Table
        bordered={true}
        bsPrefix="table"
        className="command-group-table"
        striped={true}
      >
        <table
          className="table command-group-table table-striped table-bordered"
        >
          <tbody>
            <CommandTableRow
              command={
                Command {
                  "command": Array [],
                  "description": Array [],
                  "id": "cmd-1",
                  "scmBreezeShortcut": Array [],
                }
              }
              key="0"
            />
            <CommandTableRow
              command={
                Command {
                  "command": Array [],
                  "description": Array [],
                  "id": "cmd-2",
                  "scmBreezeShortcut": Array [],
                }
              }
              key="1"
            />
          </tbody>
        </table>
      </Table>
    </ForwardRef(Bootstrap(Table))>
  </div>
</CommandGroupTable>
`;

exports[`CommandGroupTable re-renders when props are changed 2`] = `
<CommandGroupTable
  group={
    CommandGroup {
      "commands": Array [],
      "id": "another",
      "title": "Another Group",
    }
  }
>
  <div
    className="command-group"
  >
    <h4
      className="command-group-title"
      id="another"
    >
      <div>
        Another Group
         
        <ForwardRef(Bootstrap(Badge))
          variant="secondary"
        >
          <Badge
            bsPrefix="badge"
            pill={false}
            variant="secondary"
          >
            <span
              className="badge badge-secondary"
            >
              0
            </span>
          </Badge>
        </ForwardRef(Bootstrap(Badge))>
         
        <a
          className="command-group-link"
          href="#another"
        >
          #
        </a>
      </div>
    </h4>
    <ForwardRef(Bootstrap(Table))
      bordered={true}
      className="command-group-table"
      striped={true}
    >
      <Table
        bordered={true}
        bsPrefix="table"
        className="command-group-table"
        striped={true}
      >
        <table
          className="table command-group-table table-striped table-bordered"
        >
          <tbody />
        </table>
      </Table>
    </ForwardRef(Bootstrap(Table))>
  </div>
</CommandGroupTable>
`;

exports[`CommandGroupTable renders correctly 1`] = `
<CommandGroupTable
  group={
    CommandGroup {
      "commands": Array [
        Command {
          "command": Array [],
          "description": Array [],
          "id": "cmd-1",
          "scmBreezeShortcut": Array [],
        },
        Command {
          "command": Array [],
          "description": Array [],
          "id": "cmd-2",
          "scmBreezeShortcut": Array [],
        },
      ],
      "id": "basic",
      "title": "Basic Commands",
    }
  }
>
  <div
    className="command-group"
  >
    <h4
      className="command-group-title"
      id="basic"
    >
      <div>
        Basic Commands
         
        <ForwardRef(Bootstrap(Badge))
          variant="secondary"
        >
          <Badge
            bsPrefix="badge"
            pill={false}
            variant="secondary"
          >
            <span
              className="badge badge-secondary"
            >
              2
            </span>
          </Badge>
        </ForwardRef(Bootstrap(Badge))>
         
        <a
          className="command-group-link"
          href="#basic"
        >
          #
        </a>
      </div>
    </h4>
    <ForwardRef(Bootstrap(Table))
      bordered={true}
      className="command-group-table"
      striped={true}
    >
      <Table
        bordered={true}
        bsPrefix="table"
        className="command-group-table"
        striped={true}
      >
        <table
          className="table command-group-table table-striped table-bordered"
        >
          <tbody>
            <CommandTableRow
              command={
                Command {
                  "command": Array [],
                  "description": Array [],
                  "id": "cmd-1",
                  "scmBreezeShortcut": Array [],
                }
              }
              key="0"
            />
            <CommandTableRow
              command={
                Command {
                  "command": Array [],
                  "description": Array [],
                  "id": "cmd-2",
                  "scmBreezeShortcut": Array [],
                }
              }
              key="1"
            />
          </tbody>
        </table>
      </Table>
    </ForwardRef(Bootstrap(Table))>
  </div>
</CommandGroupTable>
`;
